# axrortech

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
about/: admin.py  models.py  urls.py  views.py
asosiy/: adapters.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
blog/: admin.py  feeds.py  models.py  signals.py  sitemap.py  urls.py  views.py
config/: settings.py  urls.py
nginx/: default.conf
templates/: 404.html  base.html  donate.html  index.html  robots.txt
templates/about/: contact.html  hero.html
templates/achievements/: achievement_detail.html  achievement_list.html
templates/blog/: post_detail.html  post_list.html
templates/emails/: donation_thanks.html  new_post.html  welcome_email.html
templates/users/: profile.html
