[project]
name = "new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "boto3>=1.42.93",
    "celery>=5.6.3",
    "cryptography>=47.0.0",
    "django>=6.0.4",
    "django-allauth>=65.16.1",
    "django-ckeditor-5>=0.2.20",
    "django-storages>=1.14.6",
    "dotenv>=0.9.9",
    "gunicorn>=25.3.0",
    "pip>=26.0.1",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sentry-sdk>=2.58.0",
    "sib-api-v3-sdk>=7.6.0",
    "uvicorn>=0.45.0",
    "whitenoise>=6.12.0",
]
